styles/utils.module.css
.headingDd {
  font-size: 1.2rem;
  line-height: 1.5;
  font-weight: bold;
}

.borderCircle {
  margin: 0px 0px;
}

.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
  font-size: 1rem;
  line-height: 1.4;
  padding: 0px 0px 5px;
}

.content {
  font-size: 1.2rem;
  text-align: justify;
  line-height: 1.6;
  color: #333;
}

.content h1 {
  font-weight: 700;
}

.content hr {
  margin-top: 10px;
  margin-bottom: 8px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #CCCCCC;
  border-width: 2px;
  border-style: dashed;
}

.content blockquote {
  border-color: #CCC;
  border-width: 2px;
  border-style: solid;
  text-align: left;
  padding: 0.2em 0.5em 0.2em;
  margin: 0.5rem 0rem;
  background-color: #f9f9f9;
}

.content a {
  color: #0074d9;
}

.iconTextLight {
  display: flex;
  align-items: center;
  font-weight: bold;
  border: 2px solid transparent;
  padding: 0px 8px;
  text-align: center;
  width: auto;
  color: #222222;
}

.iconText {
  display: flex;
  align-items: center;
  font-weight: bold;
  border: 2px solid transparent;
  padding: 0px 8px;
  transition-delay: 100ms;
  transition: background-color 0s, color 0s, border-color 0s;
  border-radius: 5px;
  text-align: center;
  width: auto;
}

.iconText:hover {
  background-color: #394859;
  border-color: #394859;
}

.iconText:focus {
  outline: none;
}

